[project]
name = "lang"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gtts>=2.5.4",
    "langgraph>=1.0.5",
    "requests>=2.32.5",
    "ddtrace>=2.18.0",
    "datadog-api-client>=2.31.0",
    "python-json-logger>=2.0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
